--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,37 +61,71 @@ button{
 }
 
 /*main*/
-main{
-    max-width: 1320px;
-    padding: 100px 0;
-    margin: 0 auto;
+main {
+    margin-bottom: 40px;
 }
+
 img{
     max-width: 100%;
     ;
 }
 
 .image{
-    position: relative;
     border-radius: 10px;
     
 }
+.products{
+    display: grid;
+    grid-template: auto / repeat(4 , 1fr);
+    grid-gap:20px
+}
+.products .text-box {
+    margin-left: 25px;
+}
 
-.text{
+.products1{
+    display: grid;
+    grid-template: auto / repeat(2 , 1fr);
+    grid-gap:20px
+}
+
+.products1 .item {
+    text-align: center;
+    position: relative;
+    z-index: 1;
+   
+
+}
+.products1 .item .image {
+    margin: 40px;
+}
+.item .image{
+    padding-top:100% ;
+    border-radius: 12px;
+    background: #f4f4f4 no-repeat center;
+    background-size: cover;
+    
+}
+.sud-box {
+    justify-content: flex-end;
     position: absolute;
-    top: 140px;
-    left: 72px;
+    top: 715px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding: 4.5rem 3rem;
+    z-index: 2;
 }
-.text h1{
-    padding-bottom: 36px;
-    max-width: 50%;
-    font-family: 'Chakra Petch', sans-serif;
-    font-size: 60px;
+.sec-title{
+    margin: 52px;
+    text-align: center;
 }
-.text p{
-    font-size: 24px;
-    max-width: 50%;
-    font-family: 'Chakra Petch', sans-serif;
+
+main .products .item p {
+    padding: 5px;
+}
+main .video {
+    max-width: 100%;
 }
 
 /*footer*/
@@ -113,3 +147,158 @@ img{
     padding-right: 8px;
 }
 
+footer {
+    margin: 150px 0;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+a{
+    text-decoration: none; 
+    color: black;
+}
+li{
+    list-style: none;
+}
+button{
+    background-color: #ffffff;
+    border: none;
+    cursor: pointer;
+}
+/*header*/
+.header{
+    width: 100%;
+    padding: 0 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff;
+    font-size: 20px;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.header a{
+    color: white;
+}
+.header p, span{
+    font-family: 'Pattaya', sans-serif;
+    font-size: 32px;
+    padding: 12px;
+}
+.header span{
+    padding-right: 0 ;
+}
+
+.header .options{
+    display: flex;
+    gap: 50px;
+}
+.header .options a{
+    
+    font-weight: 500;
+    padding: 12px;
+}
+.others button{
+    padding-left: 12px;
+}
+.others i{
+    font-size: 20px;
+}
+
+/*main*/
+main {
+    margin-bottom: 40px;
+}
+
+img{
+    max-width: 100%;
+    ;
+}
+
+.image{
+    border-radius: 10px;
+    
+}
+.products{
+    display: grid;
+    grid-template: auto / repeat(4 , 1fr);
+    grid-gap:20px
+}
+.products .text-box {
+    margin-left: 25px;
+}
+
+.products1{
+    display: grid;
+    grid-template: auto / repeat(2 , 1fr);
+    grid-gap:20px
+}
+
+.products1 .item {
+    text-align: center;
+    position: relative;
+    z-index: 1;
+   
+
+}
+.products1 .item .image {
+    margin: 40px;
+}
+.item .image{
+    padding-top:100% ;
+    border-radius: 12px;
+    background: #f4f4f4 no-repeat center;
+    background-size: cover;
+    
+}
+.sud-box {
+    justify-content: flex-end;
+    position: absolute;
+    top: 715px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding: 4.5rem 3rem;
+    z-index: 2;
+}
+.sec-title{
+    margin: 52px;
+    text-align: center;
+}
+
+main .products .item p {
+    padding: 5px;
+}
+main .video {
+    max-width: 100%;
+}
+
+/*footer*/
+.footer{
+    max-width: 1320px;
+    margin: 0 auto;
+    margin-bottom: 32px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer h3{
+    margin-bottom: 16px;
+}
+.footer li{
+    line-height: 24px;
+}
+.footer i{
+    padding-right: 8px;
+}
+
+footer {
+    margin: 150px 0;
+}
