--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,11 +100,12 @@ main section {
     text-align: center;
     position: relative;
     z-index: 1;
+ 
    
 
 }
 .products1 .item .image {
-    margin: 40px;
+    margin: 60px;
 }
 .item .image{
     padding-top:100% ;
@@ -116,7 +117,7 @@ main section {
 .sud-box {
     justify-content: flex-end;
     position: absolute;
-    top: 715px;
+    top: 0;
     right: 0;
     left: 0;
     bottom: 0;
